@@ -1,6 +1,10 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2008/11/15 (alec)
+----------
+- Fix big memory consumption and speed up searching on servers without SORT capability
+
 2008/11/12 (alec)
 ----------
 - Use SORT for searching on servers with SORT capability
